--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1193.0",
+    "axios": "^0.27.2",
     "express": "^4.18.1",
     "minimist": "^1.2.6"
   }
