--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aws-sdk": "^2.1193.0",
     "axios": "^0.27.2",
     "express": "^4.18.1",
-    "minimist": "^1.2.6"
+    "minimist": "^1.2.6",
+    "node-cron": "^3.0.2"
   }
 }
